update color in component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,22 +68,26 @@
     box-sizing: border-box;
 }
 
+* {
+    transition-duration: 50ms;
+}
+
 /* Scrollbar Track */
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 6px;
     /* or height for horizontal scrollbar */
 }
 
 /* Scrollbar Track Background */
 ::-webkit-scrollbar-track {
-    background: #161414;
+    background: var(--scrollbar-track-bg);
     border-radius: 10px;
     padding: 4px;
 }
 
 /* Scrollbar Thumb (draggable part) */
 ::-webkit-scrollbar-thumb {
-    background-color: #3d3838;
+    background-color: var(--scrollbar-thumb-bg);
     border-radius: 10px;
     border: 2px solid transparent;
     /* space around thumb */
@@ -171,6 +175,18 @@ body {
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.708 0 0);
     --hover-bg: #A6C5E229;
+    --board-bg: oklch(88.2% 0.059 254.128);
+    --column-bg: oklch(92.8% 0.006 264.531);
+    --column-header-text: black;
+    --task-title: black;
+    --column-header-bg: oklch(98.5% 0.002 247.839);
+    --task-bg: white;
+    --board-navbar-bg: oklch(96.7% 0.003 264.542);
+    --board-navbar-menu-hover: oklch(92.8% 0.006 264.531);
+    --scrollbar-track-bg: oklch(96.7% 0.003 264.542);
+    --scrollbar-thumb-bg: oklch(70.7% 0.022 261.325);
+    --menu-text: black;
+    --button-bg: oklch(92.8% 0.006 264.531);
 }
 
 .dark {
@@ -206,6 +222,18 @@ body {
     --sidebar-border: oklch(1 0 0 / 10%);
     --sidebar-ring: oklch(0.556 0 0);
     --hover-bg: #A6C5E229;
+    --board-bg: #283449;
+    --column-bg: #101204;
+    --column-header-text: #B6C2CF;
+    --column-header-bg: #22272B;
+    --task-bg: #222f44;
+    --task-title: #B6C2CF;
+    --board-navbar-bg: #28303E;
+    --board-navbar-menu-hover: #3A4150;
+    --scrollbar-track-bg: #161414;
+    --scrollbar-thumb-bg: #3d3838;
+    --menu-text: #B6C2CF;
+    --button-bg: #3A4150;
 }
 
 @layer base {
