--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,7 +69,7 @@
 }
 
 * {
-    transition-duration: 50ms;
+  transition: background-color 0.01s ease, color 0.01s ease, border-color 0.01s ease;
 }
 
 /* Scrollbar Track */
